--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ numpy==1.25.0
 opencv-python==4.8.0.74
 packaging==23.1
 pathspec==0.11.1
+Pillow==10.0.0
 platformdirs==3.8.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
